--- a/module-3/Supervised-Learning/your-code/final project code.ipynb
+++ b/module-3/Supervised-Learning/your-code/final project code.ipynb
@@ -428,6 +428,8 @@
     }
    ],
    "source": [
+    "# rows and columns in dataset\n",
+    "\n",
     "solar.shape"
    ]
   },
@@ -452,6 +454,8 @@
     }
    ],
    "source": [
+    "# name of all the 15 columns in the dataset\n",
+    "\n",
     "solar.columns"
    ]
   },
