--- a/module-3/Supervised-Learning/your-code/final project code.ipynb
+++ b/module-3/Supervised-Learning/your-code/final project code.ipynb
@@ -608,8 +608,8 @@
        "Am      72\n",
        "Tm      72\n",
        "An      36\n",
-       "A-      34\n",
        "A+      34\n",
+       "A-      34\n",
        "H3      26\n",
        "As      25\n",
        "H2      24\n",
@@ -1857,6 +1857,8 @@
     }
    ],
    "source": [
+    "# cleaning data\n",
+    "\n",
     "solar['Calendar_Date_Clean'] = list(map(c0, solar['Calendar_Date']))\n",
     "solar.head()"
    ]
@@ -1928,6 +1930,8 @@
     }
    ],
    "source": [
+    "# cleaning data\n",
+    "\n",
     "solar['Calendar_Date_Month'] = list(map(c1, solar['Calendar_Date']))\n",
     "solar['Calendar_Date_Month']"
    ]
@@ -2136,6 +2140,8 @@
     }
    ],
    "source": [
+    "# cleaning data\n",
+    "\n",
     "solar['Calendar_Date_Year'] = list(map(c2, solar['Calendar_Date']))\n",
     "solar.head()"
    ]
@@ -2911,7 +2917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3083,7 +3089,7 @@
        "4               April               1997  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3095,7 +3101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3267,7 +3273,7 @@
        "4               April               1997  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3279,7 +3285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3304,7 +3310,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3315,7 +3321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3419,7 +3425,7 @@
        "4       1997 April 22               April               1997  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3431,7 +3437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3440,7 +3446,7 @@
        "7"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3451,7 +3457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3460,7 +3466,7 @@
        "16"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3473,7 +3479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3482,7 +3488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -3661,7 +3667,7 @@
        "[11329 rows x 7 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3673,7 +3679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3777,7 +3783,7 @@
        "Eclipse_Magnitude           1.000000      0.690416     0.003867  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3791,16 +3797,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a18bf1a50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1825d8d0>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3827,7 +3833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3838,7 +3844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3980,7 +3986,7 @@
        "[11329 rows x 5 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3994,7 +4000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -4086,7 +4092,7 @@
        "Sun_Azimuth           1.000000  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4098,16 +4104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a19c45550>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a199c6dd0>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
