--- a/module-3/Supervised-Learning/your-code/final project code.ipynb
+++ b/module-3/Supervised-Learning/your-code/final project code.ipynb
@@ -405,6 +405,8 @@
     }
    ],
    "source": [
+    "# obtain library to use dataset\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "solar = pd.read_csv('/Users/gracemartinez/Downloads/solar.csv')\n",
@@ -546,7 +548,8 @@
     }
    ],
    "source": [
-    "#  verifying types of data\n",
+    "# verifying types of data\n",
+    "\n",
     "solar.dtypes"
    ]
   },
@@ -561,16 +564,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOF while scanning triple-quoted string literal (<ipython-input-9-a5375aae5321>, line 15)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-a5375aae5321>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    Central_Duration      object    1/3 of null values.\u001b[0m\n\u001b[0m                                                        \n^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOF while scanning triple-quoted string literal\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\n- Need to change:\\n\\nCalendar_Date         object -> (-)Y/M/D, ex. -1997 May 22\\nEclipse_Time          object -> Date\\n\\n- will drop for python, have again for tableau:\\n\\nLatitude              object, separate into 2 columns: decimal# & Letter\\nLongitude             object, separate into 2 columns: decimal# & Letter\\n\\n- i dont think i need them:     need to see the correlation with the Y\\n\\nPath_Width_(km)       object    1/3 of null values. \\nCentral_Duration      object    1/3 of null values. \\n'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -588,12 +593,13 @@
     "- i dont think i need them:     need to see the correlation with the Y\n",
     "\n",
     "Path_Width_(km)       object    1/3 of null values. \n",
-    "Central_Duration      object    1/3 of null values. "
+    "Central_Duration      object    1/3 of null values. \n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -605,29 +611,30 @@
        "H      502\n",
        "Pb     163\n",
        "Pe     162\n",
-       "Am      72\n",
        "Tm      72\n",
+       "Am      72\n",
        "An      36\n",
        "A+      34\n",
        "A-      34\n",
        "H3      26\n",
        "As      25\n",
        "H2      24\n",
-       "T-      17\n",
        "Hm      17\n",
+       "T-      17\n",
        "Tn      14\n",
        "Ts      12\n",
        "T+       9\n",
        "Name: Eclipse_Type, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# how many of each type in the data\n",
+    "\n",
     "solar['Eclipse_Type'].value_counts()"
    ]
   },
@@ -642,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,14 +663,12 @@
     "    if 'T' in x:\n",
     "        return('T')\n",
     "    if 'H' in x:\n",
-    "        return('H')\n",
-    "    \n",
-    "    "
+    "        return('H')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -676,20 +681,21 @@
        "Name: Eclipse_Type, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# map function; recount the types in new category types\n",
+    "\n",
     "solar['Eclipse_Type'] = list(map(eclipseClean,solar['Eclipse_Type']))\n",
     "solar['Eclipse_Type'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -698,12 +704,14 @@
        "4"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# count of types now\n",
+    "\n",
     "len(solar['Eclipse_Type'].value_counts())"
    ]
   },
@@ -720,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -744,13 +752,14 @@
        "Name: Eclipse_Type, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# recount the new 3 categories\n",
+    "\n",
     "solar['Eclipse_Type'].value_counts()"
    ]
   },
@@ -765,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +788,7 @@
        "Name: Latitude, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +977,7 @@
        "4              NaN            60.6               S  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1191,7 @@
        "4                W  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1384,7 @@
        "4               S            106.4                W  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1415,18 +1424,20 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# summarizing to see null values within which columns\n",
+    "\n",
     "solar.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1463,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1476,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1487,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1640,7 +1651,7 @@
        "4            60.6               S            106.4                W  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1651,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1660,7 +1671,7 @@
        "14"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
