--- a/module-3/Supervised-Learning/your-code/main.ipynb
+++ b/module-3/Supervised-Learning/your-code/main.ipynb
@@ -351,6 +351,8 @@
     }
    ],
    "source": [
+    "# portraying first 5 records from data\n",
+    "\n",
     "websites.head()"
    ]
   },
@@ -392,6 +394,8 @@
     }
    ],
    "source": [
+    "# gathering the types of each\n",
+    "\n",
     "websites.dtypes"
    ]
   },
