--- a/module-1/Functions/your-code/main.ipynb
+++ b/module-1/Functions/your-code/main.ipynb
@@ -171,6 +171,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# function\n",
+    "\n",
     "def firstn(n):\n",
     "    number = 0\n",
     "    while number < n:\n",
@@ -203,6 +205,8 @@
     }
    ],
    "source": [
+    "# output will be numbers 0 through 4\n",
+    "\n",
     "iterator = firstn(5)\n",
     "\n",
     "for i in iterator:\n",
