--- a/module-1/Functions/your-code/main.ipynb
+++ b/module-1/Functions/your-code/main.ipynb
@@ -23,6 +23,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We first define our iterator:\n",
+    "\n",
+    "iterator = iter([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -33,10 +44,6 @@
     }
    ],
    "source": [
-    "# We first define our iterator:\n",
-    "\n",
-    "iterator = iter([1,2,3])\n",
-    "\n",
     "# We can now iterate through the object using the next function\n",
     "\n",
     "print(next(iterator))"
@@ -44,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +82,8 @@
     }
    ],
    "source": [
+    "# We continue to iterate through the iterator.\n",
+    "\n",
     "print(next(iterator))"
    ]
   },
